--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #0075db;
+  --ifm-color-primary-dark: #0568ce;
+  --ifm-color-primary-darker: #0061cc;
+  --ifm-color-primary-darkest: #0040b5;
+  --ifm-color-primary-light: #1062d3;
+  --ifm-color-primary-lighter: #1089ee;
+  --ifm-color-primary-lightest: #1090ee;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #00b2e7;
+  --ifm-color-primary-dark: #00acd7;
+  --ifm-color-primary-darker: #00d2e2;
+  --ifm-color-primary-darkest: #00c5c0;
+  --ifm-color-primary-light: #04c5e0;
+  --ifm-color-primary-lighter: #10c8ea;
+  --ifm-color-primary-lightest: #2acdff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
