--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -74,6 +74,14 @@
   grid-template-columns: 80% 20%;
 }
 
+@media (max-width: 1200px) {
+  .grid { grid-template-columns: 70% 30% }
+}
+
+@media (max-width: 996px) {
+  .grid { grid-template-columns: 80% 20% }
+}
+
 @media (max-width: 700px) {
   .grid { grid-template-columns: 70% 30% }
 }
