--- a/FabricExample/android/app/src/main/res/values/styles.xml
+++ b/FabricExample/android/app/src/main/res/values/styles.xml
@@ -4,6 +4,11 @@
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
+
+        <!-- Optional: set to transparent if your app is drawing behind the status bar. -->
+        <item name="android:statusBarColor">
+          @android:color/transparent
+        </item>
     </style>
 
 </resources>
