--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -143,7 +143,7 @@
   }
 }
 
-.label {
+.badge {
   border-radius: 20px;
   color: #fff;
   display: inline-block;
@@ -153,63 +153,63 @@
   position: relative
 }
 
-.label.android {
+.badge.android {
   background: #3DDC84
 }
 
-.label.android::before {
+.badge.android::before {
   content: "Android";
 }
 
-.label.ios {
+.badge.ios {
   background: #616a70
 }
 
-.label.ios::before {
+.badge.ios::before {
   content: "iOS";
 }
 
-.label.required {
+.badge.required {
   background: #fa5035;
 }
 
-.label.required::before {
+.badge.required::before {
   content: "Required";
 }
 
-.label.new {
+.badge.new {
   background: #40E0D0;
 }
 
-.label.new::before {
+.badge.new::before {
   content: "New";
 }
 
-.label.web {
+.badge.web {
   background: #007BFF;
 }
 
-.label.web::before {
+.badge.web::before {
   content: "Web";
 }
 
-h1 .label {
+h1 .badge {
   padding: 3px 12px;
   top: -9px
 }
 
-h2 .label {
+h2 .badge {
   padding: 3px 12px;
   top: -5px
 }
 
-h3 .label {
+h3 .badge {
   line-height: 20px;
   top: -2px
 }
 
 /* to become a circle in table of contents */
-.table-of-contents .label {
+.table-of-contents .badge {
   border-radius: 100%;
   color: transparent;
   float: none;
