docs: customize width

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -222,3 +222,11 @@ h3 .label {
   white-space: nowrap;
   width: 6px;
 }
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
