--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -15,6 +15,11 @@
   --ifm-color-primary-lightest: #1090ee;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --doc-sidebar-width: 340px !important;
+}
+
+.menu__link {
+  word-break: break-all;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
