fix: use break-word instead of break-all

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -18,7 +18,7 @@
 }
 
 .menu__link {
-  word-break: break-all;
+  word-break: break-word;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
