--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -234,3 +234,64 @@ h3 .label {
   width: 100%;
   height: 100%;
 }
+
+.keyboard-button {
+  transition: all 0.25s ease-in-out;
+}
+
+.keyboard-button-primary {
+  transition: all 0.25s ease-in-out;
+}
+
+.keyboard-button-secondary {
+  transition: all 0.25s ease-in-out;
+}
+
+.keyboard-button-secondary-2 {
+  transition: all 0.25s ease-in-out;
+}
+
+.keyboard-button-group:hover .keyboard-button {
+  fill: rgb(160, 160, 160);
+}
+
+.keyboard-button-group:hover .keyboard-button-primary {
+  fill: rgb(46, 157, 255);
+}
+
+.keyboard-button-group:hover .keyboard-button-secondary {
+  fill: rgb(123, 123, 123);
+}
+
+.keyboard-button-group:hover .keyboard-button-secondary-2 {
+  fill: rgb(255, 255, 255);
+}
+
+.hover {
+  fill: rgb(50, 50, 50);
+}
+
+@keyframes typing {
+  0% {transform: translateY(0px);}
+  25% {transform: translateY(-7px);}
+  50% {transform: translateY(0px);}
+  100% {transform: translateY(0px);}
+}
+
+.dot {
+  animation-iteration-count: infinite;
+  animation-name: typing;
+  animation-duration: 1s;
+}
+
+.dot-1 {
+  animation-delay: 0s;
+}
+
+.dot-2 {
+  animation-delay: 0.2s;
+}
+
+.dot-3 {
+  animation-delay: 0.4s;
+}
