--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -272,10 +272,18 @@ h3 .label {
 }
 
 @keyframes typing {
-  0% {transform: translateY(0px);}
-  25% {transform: translateY(0px);}
-  50% {transform: translateY(-5px);}
-  100% {transform: translateY(0px);}
+  0% {
+    transform: translateY(0px);
+  }
+  25% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
 
 .dot {
