--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -22,11 +22,25 @@
   justify-content: center;
 }
 
+.trustedBySection {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  padding-bottom: 4rem;
+}
+
+.trustedByTitle {
+  padding-bottom: 16px;
+}
+
 .trustedByImg{
-  margin: 0px 10px;
-  border-radius: 20px;
+  margin: 0px 15px;
+  border-radius: 25px;
   width: 100px;
   height: 100px;
+  box-shadow: 5px 5px 51px -29px rgba(139, 139, 139, 1);
 }
 
 .trustedByContainer {
@@ -34,4 +48,15 @@
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+  max-width: 1200px;
+  max-height: 460px; /* 3 rows only */
+  row-gap: 15px;
+  overflow: hidden;
+}
+
+.addYourApp {
+  width: 100%;
+  max-width: 1200px;
+  text-align: right;
+  margin-right: 20px;
 }
