docs: better `keyboardVerticalOffset` for `KeyboardAvoidingView`

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -90,6 +90,11 @@
   border-left-color: #ffff0080;
 }
 
+.svg {
+  height: 100%;
+  width: 50%;
+}
+
 .description-block {
   padding-right: 20px;
 }
