--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -96,6 +96,17 @@
   margin-bottom: 20px;
 }
 
+.code-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+.code-block {
+  flex: 1 1 300px;
+  overflow: auto;
+}
+
 .description-block {
   padding-right: 20px;
 }
