--- a/android/src/main/res/values/colors.xml
+++ b/android/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <resources>
   <color name="gboard_dark">#1c1c2c</color>
   <color name="gboard_light">#ebeff1</color>
+  <color name="gboard_tts_dark">#202124</color>
+  <color name="gboard_tts_light">#f8f9fa</color>
   <color name="swiftkey_dark">#141414</color>
   <color name="swiftkey_light">#f1f1f1</color>
   <color name="yandex_dark">#1a1b20</color>
   <color name="yandex_light">#eeedf4</color>
+  <color name="samsung_dark">#080808</color>
+  <color name="samsung_light">#e4e4e4</color>
 </resources>
