feat: configurable, extendable & predictable way to work with dynamic colors

--- a/android/src/main/res/values-v29/colors.xml
+++ b/android/src/main/res/values-v29/colors.xml
@@ -1,3 +1,5 @@
 <resources>
-  <color name="gboard_tts_light">#ebeff1</color>
+  <style name="gboard_tts_light">
+    <item name="color">#ebeff1</item>
+  </style>
 </resources>
